// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRoutes > from 0 modules 1`] = `undefined`;

exports[`buildRoutes > from 1 module 1`] = `
{
  "elements": {},
  "loaded": false,
  "modules": [
    {
      "fileName": "_layout.tsx",
      "id": "src/_layout.tsx",
      "load": [Function],
    },
  ],
  "path": "/",
  "test": {
    "keys": [],
    "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
  },
}
`;

exports[`buildRoutes > from 2 parent-child modules 1`] = `
{
  "elements": {},
  "loaded": false,
  "modules": [
    {
      "fileName": "_layout.tsx",
      "id": "src/_layout.tsx",
      "load": [Function],
    },
  ],
  "path": "/",
  "test": {
    "keys": [],
    "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
  },
  "tree": [
    {
      "elements": {},
      "loaded": false,
      "modules": [
        {
          "fileName": "_layout.tsx",
          "id": "src/abc/_layout.tsx",
          "load": [Function],
        },
      ],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  ],
}
`;
